salvia_macro/tests/query_ui/fail/return_impl.rs
#![allow(unused_imports)]

use std::fmt::Debug;
use salvia::{query, QueryContext, Stashable};

#[query]
async fn f(_cx: &QueryContext) -> impl Stashable + Debug {
    todo!()
}

fn main() {}
